@startuml
package "Order Outbox Worker Service" {

  interface UseCase<I, O> {
      +execute(input: I): O
  }

  class UseCase::Exception {
      +Exception(message: String)
  }

  interface WorkerUseCase {
  }

  class WorkerService {
      - rabbitMqPublisher: RabbitMqPublisher

      +execute(input: WorkerRequest): Void
  }

  interface OutboxPersistenceUseCase {
      +updateStatus(input: OutboxPersistenceRequest): Void
  }

  class OutboxPersistenceService {
      - orderOutboxRepository: OrderOutboxRepository

      +updateStatus(input: OutboxPersistenceRequest): Void
  }

  class DebeziumMessageListener {
      - workerUseCase: WorkerUseCase
      - jsonMapper: JsonMapper

      +handler(message: Message<?>): Void
  }

  class RabbitMqPublisher {
      - rabbitTemplate: RabbitTemplate

      +publish(input: WorkerRequest, correlationData: CorrelationData): Void
  }

  class RabbitMqConfig {
      +rabbitTemplate(connectionFactory: CachingConnectionFactory, outboxPersistenceUseCase: OutboxPersistenceUseCase): RabbitTemplate
  }

  class RabbitTemplate {
      - outboxPersistenceUseCase: OutboxPersistenceUseCase
  }

  interface JpaRepository<T, ID> {
      +save(entity: T): T
  }

  interface OrderOutboxRepository {
      +save(entity: OrderOutboxEntity): OrderOutboxEntity
  }

  class OrderOutboxEntity {
      +id: Long
      +sagaId: UUID
      +eventType: String
      +status: OutboxStatus
      +apiKey: String
      +productDesc: String
      +amount: BigDecimal
      +amountTaxFree: Long
      +createdAt: LocalDateTime
  }

  UseCase::Exception -up-|> RuntimeException

  DebeziumMessageListener ..> WorkerUseCase : <<inject>>

  UseCase <|-- WorkerUseCase : <WorkerRequest, Void>
  WorkerUseCase <|.. WorkerService
  OutboxPersistenceUseCase <|.. OutboxPersistenceService

  WorkerService ..> RabbitMqPublisher : <<inject>>
  RabbitMqPublisher ..> RabbitTemplate : <<inject>>
  RabbitTemplate ..> OutboxPersistenceUseCase : <<callback>>
  OutboxPersistenceService ..> OrderOutboxRepository : <<inject>>

  JpaRepository <|-- OrderOutboxRepository
}
@enduml